# brain-tumor-simulation

./: .gitignore  CMakeLists.txt  README.md
include/: brain.hpp  matrix.hpp  solver.hpp
src/: Makefile  brain.cpp  brain.h  main.cpp  matrix.cpp  matrix.h  solver.cpp  solver.h
visualization/: Pipfile  plot_evolution.py
visualization/assets/: components.css
